# Foster

./: .editorconfig  .gitignore  Directory.Build.props  Foster.sln  Foster.slnx  README.md  global.json  nuget.config
.github/workflows/: build-libs.yml  build.yml  publish_nuget.yml
Framework/: App.cs  Events.cs  Foster.Framework.csproj  Module.cs  Platform.cs  Time.cs  Window.cs
Framework/Content/: Batcher.frag.gl  Batcher.frag.spv  Batcher.vert.gl  Default.frag  Default.frag.spv  Default.vert  Default.vert.spv  Readme.md  Textured.frag  Textured.frag.gl  Textured.frag.spv  Textured.vert  Textured.vert.gl  Textured.vert.spv  compile.sh
Framework/Content/Compiled/: Batcher.fragment.dxil  Batcher.fragment.glsl  Batcher.fragment.msl  Batcher.fragment.spv  Batcher.vertex.dxil  Batcher.vertex.glsl  Batcher.vertex.msl  Batcher.vertex.spv  Textured.fragment.dxil  Textured.fragment.glsl  Textured.fragment.msl  Textured.fragment.spv  Textured.vertex.dxil  Textured.vertex.glsl  Textured.vertex.msl  Textured.vertex.spv
Framework/Content/Fonts/: Readme.md
Framework/Content/Fonts/Compiled/: Roboto.json
Framework/Content/Shaders/: Batcher.hlsl  Msdf.hlsl  Textured.hlsl
Framework/Content/Shaders/Compiled/: Batcher.fragment.dxil  Batcher.fragment.msl  Batcher.fragment.spv  Batcher.vertex.dxil  Batcher.vertex.spv  Msdf.fragment.dxil  Msdf.fragment.msl  Msdf.fragment.spv  Msdf.vertex.dxil  Msdf.vertex.msl  Msdf.vertex.spv  Textured.fragment.dxil  Textured.fragment.msl  Textured.fragment.spv  Textured.vertex.dxil  Textured.vertex.spv
Framework/Extensions/: Enum.cs  EnumExt.cs  Matrix3x2Ext.cs  Numbers.cs  Numerics.cs  QuaternionExt.cs  TimeSpan.cs  TimeSpanExt.cs  VectorExt.cs
Framework/Graphics/: Batch.cs  Batcher.cs  BlendMode.cs  DefaultShaders.cs  DrawCommand.cs  Graphics.cs  GraphicsBuffer.cs  GraphicsDevice.cs  IDrawableTarget.cs  IResource.cs  IVertex.cs  Material.cs  Mesh.cs  Renderer.cs  Shader.cs  ShaderDefaults.cs  SpriteFont.cs  Subtexture.cs  Target.cs  Texture.cs  TextureSampler.cs  UniformBuffer.cs  VertexFormat.cs
Framework/Graphics/Defaults/: BatcherShader.cs  BatcherVertex.cs  DefaultResources.cs  PosTexColVertex.cs  TexturedShader.cs
Framework/Graphics/Enums/: BlendFactor.cs  BlendMask.cs  BlendOp.cs  ClearMask.cs  CullMode.cs  DepthCompare.cs  FillMode.cs  GraphicsDriver.cs  IndexFormat.cs  Renderers.cs  SampleCount.cs  ShaderStage.cs  SpriteFontBlitModes.cs  StencilOp.cs  TextureFilter.cs  TextureFlags.cs  TextureFormat.cs  TextureWrap.cs  UniformType.cs  VertexType.cs
Framework/Graphics/Interfaces/: IDrawableTarget.cs  IGraphicResource.cs  IProvideKerning.cs  IVertex.cs
Framework/Graphics/Structs/: BlendMode.cs  BoundSampler.cs  ComputeCommand.cs  DrawCommand.cs  ShaderCreateInfo.cs  ShaderProgramInfo.cs  ShaderStageInfo.cs  ShaderUniform.cs  StencilState.cs  Subtexture.cs  TextureSampler.cs  VertexFormat.cs
Framework/Images/: Aseprite.cs  Color.cs  Font.cs  Image.cs  MsdfFont.cs  Packer.cs
Framework/Images/Enums/: ImageWriteFormat.cs
Framework/Input/: Axes.cs  Buttons.cs  Controller.cs  ControllerID.cs  ControllerState.cs  Cursor.cs  GamepadTypes.cs  Gamepads.cs  Input.cs  InputProvider.cs  InputState.cs  Keyboard.cs  KeyboardState.cs  Keys.cs  Mouse.cs  MouseButtons.cs  MouseState.cs  VirtualAxis.cs  VirtualButton.cs  VirtualStick.cs
Framework/Input/Bindings/: ActionBinding.cs  AxisBinding.cs  Binding.cs  BindingAxisOverlap.cs  BindingState.cs  ControllerAxisBinding.cs  ControllerButtonBinding.cs  KeyboardKeyBinding.cs  MouseButtonBinding.cs  MouseMotionBinding.cs  StickBinding.cs
Framework/Input/Enums/: Axes.cs  Buttons.cs  GamepadProviders.cs  GamepadTypes.cs  Keys.cs  MouseButtons.cs
Framework/Input/Sets/: ActionBindingSet.cs  AxisBindingSet.cs  StickBindingSet.cs
Framework/Input/Virtual/: VirtualAction.cs  VirtualAxis.cs  VirtualDevice.cs  VirtualInput.cs  VirtualStick.cs
Framework/Internal/: GraphicsDeviceOpenGL.cs  GraphicsDeviceSDL.cs  ImageData.cs  InputProviderSDL.cs  Platform.cs  Renderer.cs  RendererOpenGL.cs  RendererSDL.cs  SDL3.cs  SDL3_Enums.cs  SDL3_GPU.cs  Utf8.cs
Framework/Platform/: Platform.cs  Renderer.cs  SDL3.cs  SDL3_GPU.cs
Framework/Spatial/: Cardinal.cs  Circle.cs  ConvexPolygon.cs  Facing.cs  IConvexShape.cs  IProjectable.cs  Line.cs  LineInt.cs  Point2.cs  Point3.cs  Polygon.cs  Quad.cs  Ray.cs  Rect.cs  RectInt.cs  Signs.cs  Transform.cs  Triangle.cs
Framework/Storage/: Content.cs  ContentStorage.cs  DirectoryStorage.cs  FileSystem.cs  RelativeStorage.cs  Storage.cs  StorageContainer.cs  UserStorage.cs  WritableContent.cs  ZipStorage.cs
Framework/Utility/: Calc.cs  Converters.cs  Ease.cs  FileDialog.cs  HotReloadHandler.cs  Log.cs  Mask.cs  Platforms.cs  Pool.cs  Rng.cs  StackList.cs  Strings.cs  Time.cs  TriangulationEnumerator.cs  UpdateMode.cs
Platform/: CMakeLists.txt  README.md
Platform/include/: foster_platform.h
Platform/libs/linux-x64/: libSDL3.so.0  libSDL3.so.0.1.2  libSDL3.so.0.1.3  libSDL3.so.0.1.6  libSDL3.so.0.2.0  libSDL3.so.0.2.10  libSDL3.so.0.2.14  libSDL3.so.0.2.18  libSDL3.so.0.2.26  libSDL3.so.0.2.8
Platform/libs/osx/: libFosterPlatform.dylib  libSDL3.dylib
Platform/libs/x64/: FosterPlatform.exp  FosterPlatform.lib
Platform/src/: foster_font.c  foster_image.c  foster_internal.h  foster_platform.c  foster_renderer.c  foster_renderer.h  foster_renderer_d3d11.c  foster_renderer_opengl.c
Samples/Basic/: Basic.csproj  Program.cs
Samples/Bunnymark/: Bunnymark.csproj  Program.cs  README.md
Samples/Froggymark/: Froggymark.csproj  Program.cs  README.md
Samples/ImGui/: FosterImGui.csproj  Program.cs  README.md  Renderer.cs
Samples/TinyLink/: README.md  TinyLink.csproj
Samples/TinyLink/Assets/Fonts/: dogica_license.txt
Samples/TinyLink/Assets/Rooms/: -1x0.txt  0x0.txt  10x0.txt  11x0.txt  12x0.txt  13x0.txt  1x0.txt  2x0.txt  3x0.txt  3x1.txt  4x1.txt  5x1.txt  6x1.txt  7x1.txt  8x0.txt  8x1.txt  9x0.txt
Samples/TinyLink/Assets/Sprites/: blob.ase  bramble.ase  bullet.ase  door.ase  (+9 more)
Samples/TinyLink/Source/: Controls.cs  Factory.cs  Game.cs  Hitbox.cs  Manager.cs
(+23 files in other folders)
